--- a/src/subject3/subject3.html
+++ b/src/subject3/subject3.html
@@ -31,7 +31,7 @@
             <img src="assets/illust_2.jpg" alt="" />
             <img src="assets/illust_3.jpg" alt="" />
             <iframe
-              src="https://player.vimeo.com/video/870511954?h=81ada78960&autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1"
+              src="https://player.vimeo.com/video/870511954?h=81ada78960&autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1&controls=0&autopause=0"
               style="aspect-ratio: 640 /360; width: 100%"
               frameborder="0"
               allow="autoplay; fullscreen; picture-in-picture"
