--- a/src/subject2/subject2.html
+++ b/src/subject2/subject2.html
@@ -28,14 +28,14 @@
             <!-- 1개 파일의 용량을 1MB 이하로 하시오. -->
             <!-- 비메오 영상 포맷 가이드라인 링크: https://help.vimeo.com/hc/en-us/articles/12426043233169-Video-and-audio-compression-guidelines -->
             <iframe
-              src="https://player.vimeo.com/video/869492492?h=3eeb77028c&autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1"
+              src="https://player.vimeo.com/video/869492492?h=3eeb77028c&autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1&controls=0&autopause=0"
               style="aspect-ratio: 640 / 382; width: 100%"
               frameborder="0"
               allow="autoplay; fullscreen; picture-in-picture"
               allowfullscreen></iframe>
             <img src="assets/typo_02.jpg" alt="" />
             <iframe
-              src="https://player.vimeo.com/video/867659668?h=c6fffbed3c&autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1"
+              src="https://player.vimeo.com/video/867659668?h=c6fffbed3c&autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1&controls=0&autopause=0"
               style="aspect-ratio: 640 / 53; width: 100%"
               frameborder="0"
               allow="autoplay; fullscreen; picture-in-picture"
@@ -43,13 +43,13 @@
             <img src="assets/typo_03.jpg" alt="" />
             <img src="assets/typo_04.jpg" alt="" />
             <iframe
-              src="https://player.vimeo.com/video/870207889?h=4a5d646ddd&autoplay=1&loop=1&muted=1"
+              src="https://player.vimeo.com/video/870207889?h=4a5d646ddd&autoplay=1&loop=1&muted=1&controls=0&autopause=0"
               style="aspect-ratio: 640 / 360; width: 100%"
               frameborder="0"
               allow="autoplay; fullscreen; picture-in-picture"
               allowfullscreen></iframe>
             <iframe
-              src="https://player.vimeo.com/video/867666646?h=2b420c60aa&autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1"
+              src="https://player.vimeo.com/video/867666646?h=2b420c60aa&autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1&controls=0&autopause=0"
               style="aspect-ratio: 640 / 53; width: 100%"
               frameborder="0"
               allow="autoplay; fullscreen; picture-in-picture"
@@ -58,7 +58,7 @@
             <img src="assets/typo_05.jpg" alt="" />
 
             <iframe
-              src="https://player.vimeo.com/video/867666167?h=443be9abef&autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1"
+              src="https://player.vimeo.com/video/867666167?h=443be9abef&autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1&controls=0&autopause=0"
               style="aspect-ratio: 640 / 53; width: 100%"
               frameborder="0"
               allow="autoplay; fullscreen; picture-in-picture"
@@ -73,7 +73,7 @@
             <img src="assets/typo_12.jpg" alt="" />
             <img src="assets/typo_13.jpg" alt="" />
             <iframe
-              src="https://player.vimeo.com/video/867666568?h=a0cbf68ac8&autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1"
+              src="https://player.vimeo.com/video/867666568?h=a0cbf68ac8&autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1&controls=0&autopause=0"
               style="aspect-ratio: 640 / 53; width: 100%"
               frameborder="0"
               allow="autoplay; fullscreen; picture-in-picture"
